Fixed video overflow

--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -28,10 +28,10 @@ html,
 body {
   margin: 0;
   padding: 0;
-  /* overflow: hidden; */
   font-size: 1.5rem;
   box-sizing: border-box;
   background-color: black;
+  width: 100%;
 }
 
 /* workaround for video resolution in small sized devices */
